maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:77: error: not found: value getIndicator
  if(ici - getIndicator(x,y-1)>0){
           ^ShortestPathMaze:77: error: not found: value x
  if(ici - getIndicator(x,y-1)>0){
                        ^ShortestPathMaze:77: error: not found: value y
  if(ici - getIndicator(x,y-1)>0){
                          ^ShortestPathMaze:80: error: not found: value getIndicator
  }else if(ici - getIndicator(x-1,y)>0){
                 ^ShortestPathMaze:80: error: not found: value x
  }else if(ici - getIndicator(x-1,y)>0){
                              ^ShortestPathMaze:80: error: not found: value y
  }else if(ici - getIndicator(x-1,y)>0){
                                  ^ShortestPathMaze:83: error: not found: value getIndicator
  }else if(ici - getIndicator(x+1,y)>0){
                 ^ShortestPathMaze:83: error: not found: value x
  }else if(ici - getIndicator(x+1,y)>0){
                              ^ShortestPathMaze:83: error: not found: value y
  }else if(ici - getIndicator(x+1,y)>0){
                                  ^ShortestPathMaze:86: error: value elseif is not a member of Unit
possible cause: maybe a semicolon is missing before `value elseif'?
  }elseif(ici - getIndicator(x,y+1)>0){
   ^ShortestPathMaze:86: error: not found: value getIndicator
  }elseif(ici - getIndicator(x,y+1)>0){
                ^ShortestPathMaze:86: error: not found: value x
  }elseif(ici - getIndicator(x,y+1)>0){
                             ^ShortestPathMaze:86: error: not found: value y
  }elseif(ici - getIndicator(x,y+1)>0){
                               ^